rbac/00-tenant-rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cheesecake
  labels:
    tenant: app-devs
    gateway-access: "true"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
